--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,43 @@
+body{
+    margin: 8px;
+    display: block;
+}
+p{
+    color: antiquewhite;
+    text-indent: 20px;
+    margin: 10px 50px;
+    font-family: 'cambria';
+    font-size: 20px;
+}
+div{
+    padding: 20px 60px
+}
+#mainHeading{
+    color: red;
+    position: relative;
+    text-align: center;
+    font-family:'cambria';
+    font-size: 40px ;
+}
+#BackgroundColor{
+    background-color: black;
+}
+#altHeader{
+    color: rgb(197, 99, 46);
+    padding: 15px 20px;
+    text-align: center;
+    font-size: 40px;
+}
+.sizing{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    padding: 20px;
+}
+.funParagraph{
+    font-style: oblique;
+    color: green;
+    text-align: center;
+}    
 /* Write your CSS here! */
